                CHANGES in `mboost' VERSION 2.1-0 (2010-02-08)

  o  added base-learners for radial basis functions (brad())
     and smooth monotonic (or convex/concave) functions (bmono())

  o  added base-learners for Markov random fields (bmrf())

  o  changed behavior of cvrisk() if weights are used: 
     out-of-bag-risk now weighted according to "weights" as
     specified in call to mboost

  o  bols(x, intercept = FALSE) only reasonable if x is centered

  o  added family for AUC loss function


                CHANGES in `mboost' VERSION 2.0-0 (2010-02-01)

  o  generic implementation of component-wise functional gradient
     boosting in `mboost_fit', specialized code for linear,
     additive and interaction models removed

  o  new families available for ordinal, expectile and censored regression

  o  computations potentially based on package Matrix 
     (reduces memory usage)

  o  various speed improvements

  o  added interface to extract selected base-learners (selected())

  o  added interface for parallel computations in cvrisk with 
     arbitrary packages (e.g. multicore, snow)

  o  added "which" argument in predict and coef functions and improved
     usability of "which" in plot-function. Users can specify "which" as
     numeric value or as a character string

  o  added function cv() to generate matrices for k-fold cross-validation, 
     subsampling and bootstrap

  o  new function stabsel() for stability selection with error control

  o  added function model.weights() to extract the weights

  o  added interface to expand model by increasing mstop in
     model[mstop]

  o  alternative definition of degrees of freedom available

  o  Interface changes: 

     - class definition / Family() arguments changed
     - changed behavior of subset method (model[mstop]). Object
       is directly altered and not duplicated
     - argument "center" in bols replaced with "intercept" 
     - argument "z" in base-learners replaced with "by"