@@ -7,11 +7,14 @@
 
   o  changed behavior of cvrisk() if weights are used: 
      out-of-bag-risk now weighted according to "weights" as
-     specified in call to mboost
+     specified in call to mboost  
+
+  o  added family for AUC loss function
 
   o  bols(x, intercept = FALSE) only reasonable if x is centered
 
-  o  added family for AUC loss function
+  o  improved predict.mboost(): added names where missing and the 
+     offset as attribute where applicable.
 
 
                 CHANGES in `mboost' VERSION 2.0-0 (2010-02-01)
